# Constrained-ML-Deployment

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: tba_followup_instructions.md  thermal_budget_annealing_instructions.md
experiments/: generate_figures.py  run_budget_sweep.py  run_deployment.py  run_phase2.py  run_synthetic.py  test_v2_features.py  test_v3_features.py
experiments/acgf/: acgf_evaluator.py  analyze_comparison.py  optimizer_variants.py  run_ablations.py  run_comparison.py  test_acgf.py
experiments/boundary_probe/: analyze_boundary.py  boundary_configs.json  flipper_configs.json  int8_cross_model_configs.json  probe_runner.py  requirements.txt  select_boundary_configs.py
paper/: README.md
results/: rtx5080_v2_results.txt  rtx5080_v3_results.txt
results/acgf_comparison/: comparison_results.jsonl
results/boundary_probe/: probe_20260403_222845.jsonl  probe_20260403_223100.jsonl  probe_20260403_224957.jsonl  probe_20260403_233023.jsonl  probe_20260404_013022.jsonl  probe_20260404_015647.jsonl  probe_20260409_184949.jsonl  summary_stats.json
results_deployment/edge_tight/: summary.json
results_deployment/server_throughput/: summary.json
results_deployment_v2/edge_tight/: summary.json
results_synthetic/: sweep_summary.json
tba/: __init__.py  api.py  types.py
tba/baselines/: constrained_bo.py  optuna_tpe.py  random_search.py
tba/benchmarks/: model_zoo.py  profiler.py  synthetic_bench.py
tba/optimizer/: base.py  feasible_tpe.py  search_space.py  subspace_tracker.py  surrogate.py  tba_optimizer.py  (+1 more)
tests/: test_search_space.py
(+124 files in other folders)
