[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thermal-budget-annealing"
version = "0.1.0"
description = "Crash-aware deployment optimization for ML models under hard constraints and tiny budgets"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "optuna>=3.4.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "onnxruntime>=1.16.0",
]
dev = [
    "pytest>=7.4.0",
]

[tool.setuptools.packages.find]
include = ["tba*"]
